--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <ul class="todo-list"></ul>
   </div>
 
-  
+  <footer>
+    <h1 class="copyright">Created by &copy Bucur Andrei</h1>
+  </footer>
   <script src="app.js"></script>
 </body>
 </html>
